--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <img class="image" id="me" src="img/blank-profile-pic.jpeg">
           </div>
           <div class="flex-item flex-column">
-            <h2>Firstname Surname</h2>
+            <h2>Ketan Sharma</h2>
             <p class="text">
               Looking for work!<br>
               myemail (at) gmail.com<br>
@@ -64,7 +64,7 @@
             </ul>
             <h2 id="project">Education</h2>
             <hr>
-            <li><b>MSc Data Science and AI for the Creative Industries</b>, UAL Creative Computing Institute, London, September 2022 - Present.</li>
+            <li><b>MSc Data Science and AI for the Creative Industries</b>, UAL Creative Computing Institute, London, September 2024 - Present.</li>
             <li><b>BA Graphic Design</b>, Teeside University, Middlesbrough, September 2016 - May 2019.</li>
             <h2 id="project">Employment</h2>
             <hr>
