--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             <h2>Biography</h2>
             <hr>
             <p class="text">
-              I am about to graduate from the UAL Creative Computing Institute, from the MSc Data Science and AI for the Creative Industries. I previously used to work as a graphic designer.
+              About
+                I'm a 21-year-old AI and interactive media enthusiast with a background in Animation & VFX. Currently pursuing an MSc in Data Science & AI for the Creative Industries at UAL, I focus on AI-driven media, real-time interaction, and algorithmic problem-solving.
               <b>I am passionate about data science, NLP, and the possibilities for using them for new creative experiences.</b> In my spare time I enjoy rock climbing and knitting!
             </p>
             <h3>Table of Content</h3>
