--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
           <div class="flex-item flex-column">
             <h2>Ketan Sharma</h2>
             <p class="text">
-              Looking for work!<br>
-              myemail (at) gmail.com<br>
+              Looking for exciting opportunities in AI, Simulation, or Creative Tech<br>
+              ketan7sharma@gmail.com<br>
            </p>
           </div>
         </div>
@@ -52,8 +52,8 @@
             <hr>
             <p class="text">
               About
-                I'm a 21-year-old AI and interactive media enthusiast with a background in Animation & VFX. Currently pursuing an MSc in Data Science & AI for the Creative Industries at UAL, I focus on AI-driven media, real-time interaction, and algorithmic problem-solving.
-              <b>I am passionate about data science, NLP, and the possibilities for using them for new creative experiences.</b> In my spare time I enjoy rock climbing and knitting!
+              I'm a 21-year-old AI and interactive media enthusiast with a background in Animation & VFX. Currently pursuing an MSc in Data Science & AI for the Creative Industries at UAL, I focus on AI-driven media, real-time interaction, and algorithmic problem-solving.
+              <b>I have experience working with Python, C++, and a range of creative and technical tools.</b> In my spare time I enjoy rock climbing and knitting!
             </p>
             <h3>Table of Content</h3>
             <ul>
