--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <p class="text">
               About
               I'm a 21-year-old AI and interactive media enthusiast with a background in Animation & VFX. Currently pursuing an MSc in Data Science & AI for the Creative Industries at UAL, I focus on AI-driven media, real-time interaction, and algorithmic problem-solving.
-              <b>I have experience working with Python, C++, and a range of creative and technical tools.</b> In my spare time I enjoy rock climbing and knitting!
+              <b>I have experience working with Python, C++, and a range of creative and technical tools.</b> In my spare time I enjoy experimenting with AI and 3D DCC Links and creative coding.
             </p>
             <h3>Table of Content</h3>
             <ul>
@@ -66,12 +66,10 @@
             <h2 id="project">Education</h2>
             <hr>
             <li><b>MSc Data Science and AI for the Creative Industries</b>, UAL Creative Computing Institute, London, September 2024 - Present.</li>
-            <li><b>BA Graphic Design</b>, Teeside University, Middlesbrough, September 2016 - May 2019.</li>
+            <li><b>BSc Animation & VFX </b>, Amity University, Mumbai, India 2020 - May 2023.</li>
             <h2 id="project">Employment</h2>
             <hr>
-            <li><b>Graphic Designer</b>, Moonfish, Gateshead, January 2020 - May 2022.</li>
-            <li><b>Social media Coordiator</b>, Moosefest, Middlesbrough, June 2019 - December 2019.</li>
-            <li><b>Social media Internship</b>, Moosefest, Middlesbrough, May 2018 - August 2018.</li>
+            <li><b>Crowd Technical Director</b>, Double Negative, Mumbai, India January 2022 - Jun 2023.</li>
             <h2 id="project">Projects</h2>
             <hr>
             <li><b>Text classification of poems</b>, 2022, Code: <a href= "https://github.com/cci-student/NLP-project">https://github.com/cci-student/NLP-project</li></a>
