--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="content-table flex-column">
         <div class="flex-row">
           <div class="flex-item flex-column">
-            <img class="image" id="me" src="img/blank-profile-pic.jpeg">
+            <img class="image" id="me" src="img/Profilepic.jpg">
           </div>
           <div class="flex-item flex-column">
             <h2>Ketan Sharma</h2>
@@ -72,12 +72,12 @@
             <li><b>Crowd Technical Director</b>, Double Negative, Mumbai, India January 2022 - Jun 2023.</li>
             <h2 id="project">Projects</h2>
             <hr>
-            <li><b>Text classification of poems</b>, 2022, Code: <a href= "https://github.com/cci-student/NLP-project">https://github.com/cci-student/NLP-project</li></a>
-            <li><b>BuscuitGAN</b> - A GAN trained on a custom dataset of buscuits, 2023, Code: <a href= "https://github.com/cci-student/Buscuit-GAN">https://github.com/cci-student/Buscuit-GAN</li></a>
+            <li><b>Sample Text</b> - Sample Text <a href= "https://github.com/cci-student/NLP-project">Sample Text</li></a>
+            <li><b>Sample Text</b> - Sample Text <a href= "https://github.com/cci-student/Buscuit-GAN">Sample Text</li></a>
             <h2 id="professional">Professional activities</h2>
             <hr>
-            <li><b>Student representative</b>, Creative Computing Instute, September 2022 - Present.</li>
-            <li><b>Student representative</b>, Teeside University, September 2017 - June 2019.</li>
+            <li><b>Sample Text</b>, Sample Text</li>
+            <li><b>Sample Text</b>, Sample Text</li>
             <h2 id="award">Awards and honours</h2>
             <hr>
             <li><b>Most creative project</b>, UAL Hackathon, 2023.</li>
