--- a/index.html
+++ b/index.html
@@ -74,13 +74,9 @@
             <hr>
             <li><b>Sample Text</b> - Sample Text <a href= "https://github.com/cci-student/NLP-project">Sample Text</li></a>
             <li><b>Sample Text</b> - Sample Text <a href= "https://github.com/cci-student/Buscuit-GAN">Sample Text</li></a>
-            <h2 id="professional">Professional activities</h2>
-            <hr>
-            <li><b>Sample Text</b>, Sample Text</li>
-            <li><b>Sample Text</b>, Sample Text</li>
             <h2 id="hobbies">Hobbies</h2>
             <hr>
-            <p>I love bouldering and regularly go climbing with the <a href="https://www.arts-su.com/yourcommunities/clubs/club/ualclimbing/">UAL Climbing Society</a> on indoor bouldering walls and we have been on some climbing trips to the Yorkshire dales and Devon. In my spare time I knit hats and sell them on <a href="https://www.etsy.com/uk/">etsy</a>.</p>
+            <p>I'm passionate about running and weightlifting to stay disciplined, love maintaining aquariums and studying aquatic ecosystems, explore quantum computing and emerging technologies, and prioritize staying both physically fit and mentally sharp.</a>.</p>
           <!--End Projects-->
         </div>
       </div>
