--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
             <h2>Biography</h2>
             <hr>
             <p class="text">
-              About
-              I'm a 21-year-old AI and interactive media enthusiast with a background in Animation & VFX. Currently pursuing an MSc in Data Science & AI for the Creative Industries at UAL, I focus on AI-driven media, real-time interaction, and algorithmic problem-solving.
-              <b>I have experience working with Python, C++, and a range of creative and technical tools.</b> In my spare time I enjoy experimenting with AI and 3D DCC Links and creative coding.
+              I'm a 22-year-old AI/ML Engineer specializing in LLMs and Computer Vision, with a background in Animation & VFX. Currently pursuing an MSc in Data Science & AI for the Creative Industries at UAL, </b>I focus on MLOps, RAG systems, agentic AI, and scalable deployments on cloud and simulated systems.</b> I have experience working with Python, C++, and a range of creative and technical tools for building AI-driven media solutions and real-time interactive experiences. My recent projects include emotion-based media playback, AI-powered interactive systems, and optimization algorithms for scalable applications. I'm particularly passionate about generative AI, reinforcement learning, and complex system development, while staying physically active through running and weightlifting, maintaining aquariums, and exploring quantum computing. Always open to collaborations in AI, creative technology, and advanced coding challenges.
             </p>
             <h3>Table of Content</h3>
             <ul>
