--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h2>Biography</h2>
             <hr>
             <p class="text">
-              I'm a 22-year-old AI/ML Engineer specializing in LLMs and Computer Vision, with a background in Animation & VFX. Currently pursuing an MSc in Data Science & AI for the Creative Industries at UAL, </b>I focus on MLOps, RAG systems, agentic AI, and scalable deployments on cloud and simulated systems.</b> I have experience working with Python, C++, and a range of creative and technical tools for building AI-driven media solutions and real-time interactive experiences. My recent projects include emotion-based media playback, AI-powered interactive systems, and optimization algorithms for scalable applications. I'm particularly passionate about generative AI, reinforcement learning, and complex system development, while staying physically active through running and weightlifting, maintaining aquariums, and exploring quantum computing. Always open to collaborations in AI, creative technology, and advanced coding challenges.
+              I'm a 22-year-old AI/ML Engineer specializing in LLMs and Computer Vision, with a background in Animation & VFX. Currently pursuing an MSc in Data Science & AI for the Creative Industries at UAL, <b>I focus on MLOps, RAG systems, agentic AI, and scalable deployments on cloud and simulated systems.</b> I have experience working with Python, C++, and a range of creative and technical tools for building AI-driven media solutions and real-time interactive experiences. My recent projects include emotion-based media playback, AI-powered interactive systems, and optimization algorithms for scalable applications. I'm particularly passionate about generative AI, reinforcement learning, and complex system development, while staying physically active through running and weightlifting, maintaining aquariums, and exploring quantum computing. Always open to collaborations in AI, creative technology, and advanced coding challenges.
             </p>
             <h3>Table of Content</h3>
             <ul>
@@ -63,8 +63,10 @@
             </ul>
             <h2 id="project">Education</h2>
             <hr>
-            <li><b>MSc Data Science and AI for the Creative Industries</b>, UAL Creative Computing Institute, London, September 2024 - Present.</li>
+            <li><b>MSc Data Science and AI for the Creative Industries</b>, UAL Creative Computing Institute, London, September 2024-25 - Present.</li>
             <li><b>BSc Animation & VFX </b>, Amity University, Mumbai, India 2020 - May 2023.</li>
+            <li><b>Junior College / High School </b>, Ritambara Vishwa Vidyapeeths Malini Kishor College of Commerce and Economics, Mumbai, India 2018 - May 2020.</li>
+            <li><b>Early, Primary & Secondary Education </b>, Podar International School, Mumbai, India 2007 - May 2018.</li>
             <h2 id="project">Employment</h2>
             <hr>
             <li><b>Crowd Technical Director</b>, Double Negative, Mumbai, India January 2022 - Jun 2023.</li>
