--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
               <li><a href="#Education">Education</a></li>
               <li><a href="#Employment">Employment</a></li>
               <li><a href="#project">Projects</a></li>
-              <li><a href="#award">Awards and Honors</a></li>
               <li><a href="#hobbies">Hobbies</a></li>
             </ul>
             <h2 id="project">Education</h2>
@@ -72,9 +71,9 @@
             <li><b>Crowd Technical Director</b>, Double Negative, Mumbai, India January 2022 - Jun 2023.</li>
             <h2 id="project">Projects</h2>
             <hr>
-            <li><b>Sample Text</b> - Sample Text <a href= "https://github.com/cci-student/NLP-project">Sample Text</li></a>
-            <li><b>Sample Text</b> - Sample Text <a href= "https://github.com/cci-student/Buscuit-GAN">Sample Text</li></a>
-            <h2 id="hobbies">Hobbies</h2>
+            <li><b>Automated Music Festival Poster Image Generation</b> - Created an end-to-end automated workflow for generating music festival promotional posters using generative AI and image processing algorithms with hyper-personalization features <a href="https://github.com/cci-student/NLP-project">View Project</a></li>
+            <li><b>Emotion Detection Model</b> - Developed a deep learning-based emotion recognition system for media playback applications using computer vision techniques, achieving 82% accuracy on annotated datasets <a href="https://github.com/cci-student/Buscuit-GAN">View Project</a></li>
+            <li><b>Virtual Real-time Clothing Try-on System</b> - Developing an offline generative try-on system using CP-VTON/OOTDiffusion and pose-based garment warping for real-time clothing visualization <a href="https://github.com/cci-student/Buscuit-GAN">View Project</a></li>
             <hr>
             <p>I'm passionate about running and weightlifting to stay disciplined, love maintaining aquariums and studying aquatic ecosystems, explore quantum computing and emerging technologies, and prioritize staying both physically fit and mentally sharp.</a>.</p>
           <!--End Projects-->
