--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             <hr>
             <li><b>Automated Music Festival Poster Image Generation</b> - Created an end-to-end automated workflow for generating music festival promotional posters using generative AI and image processing algorithms with hyper-personalization features <a href="https://github.com/cci-student/NLP-project">View Project</a></li>
             <li><b>Emotion Detection Model</b> - Developed a deep learning-based emotion recognition system for media playback applications using computer vision techniques, achieving 82% accuracy on annotated datasets <a href="https://github.com/cci-student/Buscuit-GAN">View Project</a></li>
-            <li><b>Virtual Real-time Clothing Try-on System</b> - Developing an offline generative try-on system using CP-VTON/OOTDiffusion and pose-based garment warping for real-time clothing visualization <a href="https://github.com/cci-student/Buscuit-GAN">View Project</a></li>
-            <hr>
+            <li><b>Virtual Real-time Clothing Try-on System</b> - A computer vision-driven virtual try-on pipeline leveraging generative modeling, 3D human body reconstruction from monocular webcam input, multi-view garment mesh generation, cloth simulation with material-aware physics, and structured metadata integration for real-time fit analysis and user-centered interface design. <a href="https://github.com/cci-student/Buscuit-GAN">View Project</a></li>
+            <h2 id="hobbies">Hobbies</h2>
             <p>I'm passionate about running and weightlifting to stay disciplined, love maintaining aquariums and studying aquatic ecosystems, explore quantum computing and emerging technologies, and prioritize staying both physically fit and mentally sharp.</a>.</p>
           <!--End Projects-->
         </div>
