--- a/index.html
+++ b/index.html
@@ -71,9 +71,30 @@
             <li><b>Crowd Technical Director</b>, Double Negative, Mumbai, India January 2022 - Jun 2023.</li>
             <h2 id="project">Projects</h2>
             <hr>
-            <li><b>Automated Music Festival Poster Image Generation</b> - Created an end-to-end automated workflow for generating music festival promotional posters using generative AI and image processing algorithms with hyper-personalization features <a href="https://github.com/cci-student/NLP-project">View Project</a></li>
-            <li><b>Emotion Detection Model</b> - Developed a deep learning-based emotion recognition system for media playback applications using computer vision techniques, achieving 82% accuracy on annotated datasets <a href="https://github.com/cci-student/Buscuit-GAN">View Project</a></li>
-            <li><b>Virtual Real-time Clothing Try-on System</b> - A computer vision-driven virtual try-on pipeline leveraging generative modeling, 3D human body reconstruction from monocular webcam input, multi-view garment mesh generation, cloth simulation with material-aware physics, and structured metadata integration for real-time fit analysis and user-centered interface design. <a href="https://github.com/cci-student/Buscuit-GAN">View Project</a></li>
+            <li><b>Automated Music Festival Poster Image Generation</b>
+              <ul>
+                  <li>Created an end-to-end automated workflow for generating music festival promotional posters using generative AI and image processing algorithms</li>
+                  <li>Implemented hyper-personalization features where each user/viewer receives a customized version of the poster catered to individual preferences or group demographics</li>
+                  <li>Successfully deployed functional generation pipeline with personalized content delivery</li>
+              </ul>
+              <a href="https://github.com/cci-student/NLP-project">View Project</a>
+            </li>
+
+            <li><b>Emotion Detection Model</b>
+              <ul>
+                  <li>Developed a deep learning-based emotion recognition system for media playback applications using computer vision techniques and neural networks</li>
+                  <li>Achieved 82% accuracy when validated on annotated datasets</li>
+              </ul>
+              <a href="https://github.com/cci-student/Buscuit-GAN">View Project</a>
+            </li>
+
+            <li><b>Virtual Real-time Clothing Try-on System</b>
+              <ul>
+                  <li>Developing an offline generative try-on system using CP-VTON/OOTDiffusion and pose-based garment warping</li>
+                  <li>Project in active development phase</li>
+              </ul>
+              <a href="https://github.com/cci-student/Buscuit-GAN">View Project</a>
+            </li>
             <h2 id="hobbies">Hobbies</h2>
             <p>I'm passionate about running and weightlifting to stay disciplined, love maintaining aquariums and studying aquatic ecosystems, explore quantum computing and emerging technologies, and prioritize staying both physically fit and mentally sharp.</a>.</p>
           <!--End Projects-->
