--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <li><b>Crowd Technical Director</b>, Double Negative, Mumbai, India January 2022 - Jun 2023.</li>
             <h2 id="project">Projects</h2>
             <hr>
-            <li><h3><b>Automated Music Festival Poster Image Generation</b></h3>
+            <li style="list-style: none;"><h3><b>Automated Music Festival Poster Image Generation</b></h3>
               <ul>
                   <li>Created an end-to-end automated workflow for generating music festival promotional posters using generative AI and image processing algorithms</li>
                   <li>Implemented hyper-personalization features where each user/viewer receives a customized version of the poster catered to individual preferences or group demographics</li>
@@ -80,7 +80,7 @@
               <a href="https://github.com/cci-student/NLP-project">View Project</a>
             </li>
 
-            <li><h3><b>Emotion Detection Model</b></h3>
+            <li style="list-style: none;"><h3><b>Emotion Detection Model</b></h3>
               <ul>
                   <li>Developed a deep learning-based emotion recognition system for media playback applications using computer vision techniques and neural networks</li>
                   <li>Achieved 82% accuracy when validated on annotated datasets</li>
@@ -88,7 +88,7 @@
               <a href="https://github.com/cci-student/Buscuit-GAN">View Project</a>
             </li>
 
-            <li><h3><b>Virtual Real-time Clothing Try-on System</b></h3>
+            <li style="list-style: none;"><h3><b>Virtual Real-time Clothing Try-on System</b></h3>
               <ul>
                   <li>Developing an offline generative try-on system using CP-VTON/OOTDiffusion and pose-based garment warping</li>
                   <li>Project in active development phase</li>
