--- a/index.html
+++ b/index.html
@@ -91,8 +91,10 @@
             <li style="list-style: none;"><h3><b>Virtual Real-time Clothing Try-on System</b></h3>
               <a href="https://github.com/cci-student/Buscuit-GAN">View Project</a>
               <ul>
-                  <li>Developing an offline generative try-on system using CP-VTON/OOTDiffusion and pose-based garment warping</li>
-                  <li>Project in active development phase</li>
+                  <li>Implementing monocular 3D body reconstruction using webcam input and pose estimation for personalized virtual try-on alignment</li>
+                  <li>Developing multi-view garment mesh synthesis converting 2D garment images into 3D meshes via neural implicit surface reconstruction</li>
+                  <li>Building material-aware cloth simulation with physically accurate garment deformation based on inferred material properties</li>
+                  <li>Creating metadata-driven fit feedback system integrating product metadata for contextual, region-specific fit analysis</li>
               </ul>
             </li>
             <h2 id="hobbies">Hobbies</h2>
