--- a/index.html
+++ b/index.html
@@ -97,6 +97,16 @@
                   <li>Creating metadata-driven fit feedback system integrating product metadata for contextual, region-specific fit analysis</li>
               </ul>
             </li>
+            <li style="list-style: none;"><h3><b>Health Habit Buddy</b></h3>
+              <a href="https://github.com/23046385/Health-Habit-Buddy">View Project</a>
+              <ul>
+                  <li>Built a minimalist wellness tracking application using Streamlit framework for clean, modern black-and-white user interface</li>
+                  <li>Integrated local AI text generation using Ollama and LLaMA 2 model for personalized motivational messages without cloud dependencies</li>
+                  <li>Implemented privacy-focused architecture with 100% local processing, ensuring user data remains on-device</li>
+                  <li>Developed daily habit tracking functionality with completion counters and AI-generated encouragement for each completed task</li>
+                  <li>Created an offline-first application design targeting wellness creators and health-conscious users with a focus on data privacy</li>
+              </ul>
+            </li>
             <h2 id="hobbies">Hobbies</h2>
             <hr>
             <p>I'm passionate about running and weightlifting to stay disciplined, love maintaining aquariums and studying aquatic ecosystems, explore quantum computing and emerging technologies, and prioritize staying both physically fit and mentally sharp.</a>.</p>
