--- a/index.html
+++ b/index.html
@@ -72,40 +72,41 @@
             <h2 id="project">Projects</h2>
             <hr>
             <li style="list-style: none;"><h3><b>Automated Music Festival Poster Image Generation</b></h3>
-              <a href="https://github.com/cci-student/NLP-project">View Project</a>
-              <ul>
-                  <li>Created an end-to-end automated workflow for generating music festival promotional posters using generative AI and image processing algorithms</li>
-                  <li>Implemented hyper-personalization features where each user/viewer receives a customized version of the poster catered to individual preferences or group demographics</li>
-                  <li>Successfully deployed functional generation pipeline with personalized content delivery</li>
-              </ul>
+            <a href="https://github.com/cci-student/NLP-project" target="_blank">View Project</a>
+            <ul>
+                <li>Created an end-to-end automated workflow for generating music festival promotional posters using generative AI and image processing algorithms</li>
+                <li>Implemented hyper-personalization features where each user/viewer receives a customized version of the poster catered to individual preferences or group demographics</li>
+                <li>Successfully deployed functional generation pipeline with personalized content delivery</li>
+            </ul>
             </li>
 
             <li style="list-style: none;"><h3><b>Emotion Detection Model</b></h3>
-              <a href="https://github.com/cci-student/Buscuit-GAN">View Project</a>
-              <ul>
-                  <li>Developed a deep learning-based emotion recognition system for media playback applications using computer vision techniques and neural networks</li>
-                  <li>Achieved 82% accuracy when validated on annotated datasets</li>
-              </ul>
+            <a href="https://github.com/cci-student/Buscuit-GAN" target="_blank">View Project</a>
+            <ul>
+                <li>Developed a deep learning-based emotion recognition system for media playback applications using computer vision techniques and neural networks</li>
+                <li>Achieved 82% accuracy when validated on annotated datasets</li>
+            </ul>
             </li>
 
             <li style="list-style: none;"><h3><b>Virtual Real-time Clothing Try-on System</b></h3>
-              <a href="https://github.com/cci-student/Buscuit-GAN">View Project</a>
-              <ul>
-                  <li>Implementing monocular 3D body reconstruction using webcam input and pose estimation for personalized virtual try-on alignment</li>
-                  <li>Developing multi-view garment mesh synthesis converting 2D garment images into 3D meshes via neural implicit surface reconstruction</li>
-                  <li>Building material-aware cloth simulation with physically accurate garment deformation based on inferred material properties</li>
-                  <li>Creating metadata-driven fit feedback system integrating product metadata for contextual, region-specific fit analysis</li>
-              </ul>
+            <a href="https://github.com/cci-student/Buscuit-GAN" target="_blank">View Project</a>
+            <ul>
+                <li>Implementing monocular 3D body reconstruction using webcam input and pose estimation for personalized virtual try-on alignment</li>
+                <li>Developing multi-view garment mesh synthesis converting 2D garment images into 3D meshes via neural implicit surface reconstruction</li>
+                <li>Building material-aware cloth simulation with physically accurate garment deformation based on inferred material properties</li>
+                <li>Creating metadata-driven fit feedback system integrating product metadata for contextual, region-specific fit analysis</li>
+            </ul>
             </li>
+
             <li style="list-style: none;"><h3><b>Health Habit Buddy</b></h3>
-              <a href="https://github.com/23046385/Health-Habit-Buddy">View Project</a>
-              <ul>
-                  <li>Built a minimalist wellness tracking application using Streamlit framework for clean, modern black-and-white user interface</li>
-                  <li>Integrated local AI text generation using Ollama and LLaMA 2 model for personalized motivational messages without cloud dependencies</li>
-                  <li>Implemented privacy-focused architecture with 100% local processing, ensuring user data remains on-device</li>
-                  <li>Developed daily habit tracking functionality with completion counters and AI-generated encouragement for each completed task</li>
-                  <li>Created an offline-first application design targeting wellness creators and health-conscious users with a focus on data privacy</li>
-              </ul>
+            <a href="https://github.com/23046385/Health-Habit-Buddy" target="_blank">View Project</a>
+            <ul>
+                <li>Built a minimalist wellness tracking application using Streamlit framework for clean, modern black-and-white user interface</li>
+                <li>Integrated local AI text generation using Ollama and LLaMA 2 model for personalized motivational messages without cloud dependencies</li>
+                <li>Implemented privacy-focused architecture with 100% local processing, ensuring user data remains on-device</li>
+                <li>Developed daily habit tracking functionality with completion counters and AI-generated encouragement for each completed task</li>
+                <li>Created an offline-first application design targeting wellness creators and health-conscious users with a focus on data privacy</li>
+            </ul>
             </li>
             <h2 id="hobbies">Hobbies</h2>
             <hr>
