--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </li>
 
             <li style="list-style: none;"><h3><b>Emotion Detection Model</b></h3>
-            <a href="https://github.com/cci-student/Buscuit-GAN" target="_blank">View Project</a>
+            <a href="https://git.arts.ac.uk/23046385/AI-4-Media-Project-Ketan-Sharma" target="_blank">View Project</a>
             <ul>
                 <li>Developed a deep learning-based emotion recognition system for media playback applications using computer vision techniques and neural networks</li>
                 <li>Achieved 82% accuracy when validated on annotated datasets</li>
@@ -89,7 +89,7 @@
             </li>
 
             <li style="list-style: none;"><h3><b>Virtual Real-time Clothing Try-on System</b></h3>
-            <a href="https://github.com/cci-student/Buscuit-GAN" target="_blank">View Project</a>
+            <a href="https://github.com/23046385/AI-Powered-Virtual-Try-On-System" target="_blank">View Project</a>
             <ul>
                 <li>Implementing monocular 3D body reconstruction using webcam input and pose estimation for personalized virtual try-on alignment</li>
                 <li>Developing multi-view garment mesh synthesis converting 2D garment images into 3D meshes via neural implicit surface reconstruction</li>
