--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
           <div class="flex-item flex-column">
             <h2>Ketan Sharma</h2>
             <p class="text">
-              Looking for exciting opportunities in AI, Simulation, or Creative Tech<br>
-              ketan7sharma@gmail.com<br>
-           </p>
+              London, UK | <a href="https://www.linkedin.com/in/ketan-sharma-b7556a1b2/" target="_blank">LinkedIn</a> | <a href="https://github.com/ketan7sharma" target="_blank">GitHub</a><br>
+              ketan7sharma@gmail.com | +44 07818980305 [cite: 72]
+            </p>
           </div>
         </div>
         <div class="flex-row">
@@ -51,67 +51,126 @@
             <h2>Biography</h2>
             <hr>
             <p class="text">
-              I'm a 22-year-old MSc Data Science & AI student at UAL Creative Computing Institute, London, UK, originally from Mumbai, India. Specializing in Computer Vision, Deep Learning, and LLMs with professional experience as Crowd Technical Director at DNEG. <b>I focus on MLOps, RAG systems, agentic AI, and scalable deployments on cloud and simulated systems.</b> I have experience working with <b>Python, C++, TensorFlow, PyTorch,</b> and a range of creative and technical tools for building AI-driven media solutions and real-time interactive experiences. My recent projects include emotion-based media playback, AI-powered interactive systems, and optimization algorithms for scalable applications. Coming from an underprivileged background, I've reached this position through merit and determination, and I'm known as a reliable team player with strong adaptability and communication skills. I stay physically active through <b>running and weightlifting, maintain aquariums, explore quantum computing, and enjoy cooking.</b>Always open to collaborations in AI, creative technology, and advanced coding challenges.
+              I'm a 22-year-old MSc Data Science & AI student at UAL Creative Computing Institute, London, UK, originally from Mumbai, India. [cite: 74] Specializing in computer vision, deep learning, and LLMs with professional experience as crowd technical director at DNEG. [cite: 75] I focus on MLOps, RAG systems, agentic AI, and scalable deployments on cloud and simulated systems. [cite: 76] I have experience working with Python, C++, TensorFlow, PyTorch, and a range of creative and technical tools for building AI-driven media solutions and real-time interactive experiences. [cite: 77] My recent projects include emotion-based media playback, AI-powered interactive systems, and optimization algorithms for scalable applications. [cite: 78] Coming from an underprivileged background, I've reached this position through merit and determination, and I'm known as a reliable team player with strong adaptability and communication skills. [cite: 79] I stay physically active through running and weightlifting, maintain aquariums, explore quantum computing, and enjoy cooking. [cite: 80] Always open to collaborations in AI, creative technology, and advanced coding challenges. [cite: 81]
             </p>
             <h3>Table of Content</h3>
             <ul>
-              <li><a href="#Education">Education</a></li>
-              <li><a href="#Employment">Employment</a></li>
-              <li><a href="#project">Projects</a></li>
+              <li><a href="#skills">Key Skills</a></li>
+              <li><a href="#education">Education</a></li>
+              <li><a href="#employment">Employment</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#languages">Languages</a></li>
               <li><a href="#hobbies">Hobbies</a></li>
             </ul>
-            <h2 id="project">Education</h2>
+
+            <h2 id="skills">Key Skills</h2>
             <hr>
-            <li><b>MSc Data Science and AI for the Creative Industries</b>, UAL Creative Computing Institute, London, September 2024-25 - Present.</li>
-            <li><b>BSc Animation & VFX </b>, Amity University, Mumbai, India 2020 - May 2023.</li>
-            <li><b>Junior College / High School </b>, Ritambara Vishwa Vidyapeeths Malini Kishor College of Commerce and Economics, Mumbai, India 2018 - May 2020.</li>
-            <li><b>Early, Primary & Secondary Education </b>, Podar International School, Mumbai, India 2007 - May 2018.</li>
-            <h2 id="project">Employment</h2>
+            <ul>
+                <li><b>Programming Languages:</b> Python, C++, JavaScript [cite: 84]</li>
+                <li><b>Machine Learning Frameworks:</b> TensorFlow, PyTorch, Scikit-learn, Keras [cite: 85]</li>
+                <li><b>Data Science Tools:</b> Pandas, NumPy, Matplotlib, Data Analysis, Data Wrangling [cite: 86]</li>
+                <li><b>AI Specializations:</b> Computer Vision, Deep Learning, Natural Language Processing (NLP), Generative AI, Reinforcement Learning [cite: 87]</li>
+                <li><b>Cloud Platforms:</b> AWS, Azure, Google Cloud Platform [cite: 88]</li>
+                <li><b>Technical Capabilities:</b> Real-time Systems, Algorithmic Problem-Solving, Simulation, Optimization [cite: 89]</li>
+            </ul>
+
+            <h3>Personal Attributes</h3>
+            <ul>
+                <li><b>Team Player:</b> Collaborative approach with strong communication skills across diverse teams [cite: 93]</li>
+                <li><b>Adaptable:</b> Quick to learn new technologies and adjust to changing project requirements [cite: 94]</li>
+                <li><b>Reliable:</b> Consistent delivery of high-quality work with attention to detail [cite: 94]</li>
+                <li><b>Innovation-Driven:</b> Passionate about applying cutting-edge AI solutions to real-world problems [cite: 95]</li>
+                <li><b>Research-Oriented:</b> Strong analytical thinking and problem-solving capabilities [cite: 97]</li>
+            </ul>
+
+            <h2 id="education">Education</h2>
             <hr>
-            <li><b>Crowd Technical Director</b>, Double Negative, Mumbai, India January 2022 - Jun 2023.</li>
-            <h2 id="project">Projects</h2>
+            <ul>
+              <li><b>MSc, Data Science & AI for the Creative Industries</b>, UAL Creative Computing Institute, London, UK (2024-2025) [cite: 133]
+                <ul>
+                    <li>Specializing in Computer Vision, Deep Learning, and real-time AI applications [cite: 134]</li>
+                    <li>Focus on applying AI algorithms to creative and industrial problem-solving [cite: 135]</li>
+                </ul>
+              </li>
+              <li><b>BSc, Animation, Interactive Technology, Video Graphics & Special Effects</b>, Amity University Mumbai, Mumbai, India (2020-2023) 
+                <ul>
+                    <li>Developed strong technical foundation in creative technology and problem-solving [cite: 138]</li>
+                    <li>Built expertise in digital content creation and technical workflows [cite: 138]</li>
+                </ul>
+              </li>
+            </ul>
+
+            <h2 id="employment">Employment</h2>
+            <hr>
+            <ul>
+              <li><b>Crowd Technical Director</b>, DNEG, Mumbai, India (Jan 2022 - Jun 2023) [cite: 126]
+                <ul>
+                    <li>Developed and implemented sophisticated crowd simulations for film and television productions [cite: 127]</li>
+                    <li>Applied algorithmic problem-solving using Python/C++ scripting to optimize crowd behaviors and large-scale scene efficiency [cite: 128]</li>
+                    <li>Collaborated with VFX teams to integrate complex simulations, ensuring technical accuracy and artistic vision [cite: 129]</li>
+                    <li>Managed technical workflows for large-scale projects, ensuring assets were properly structured and accessible [cite: 130]</li>
+                </ul>
+              </li>
+            </ul>
+
+            <h2 id="projects">Projects</h2>
             <hr>
             <li style="list-style: none;"><h3><b>Automated Music Festival Poster Image Generation</b></h3>
             <a href="https://github.com/cci-student/NLP-project" target="_blank">View Project</a>
             <ul>
-                <li>Created an end-to-end automated workflow for generating music festival promotional posters using generative AI and image processing algorithms</li>
-                <li>Implemented hyper-personalization features where each user/viewer receives a customized version of the poster catered to individual preferences or group demographics</li>
-                <li>Successfully deployed functional generation pipeline with personalized content delivery</li>
+                <li>Deep Learning Image Generation: Integrated Stable Diffusion 3 (SD3) and Florence-2 models for high-quality automated poster generation with advanced text-to-image synthesis capabilities [cite: 112]</li>
+                <li>LLM-Powered Prompt Engineering: Implemented large language model integration for dynamic prompt optimization and refinement, enabling context-aware content generation [cite: 113]</li>
+                <li>Hyper-Personalization Pipeline: Developed automated workflow for generating customized promotional content based on user demographics and preferences with scalable batch processing [cite: 114]</li>
+                <li>Multi-Modal AI Integration: Combined computer vision models with natural language processing for intelligent text encoding and visual content generation [cite: 115]</li>
+                <li>Production-Ready Workflow: Built end-to-end automation pipeline including image loading, resizing, text processing, generation, and output management with iterative refinement capabilities [cite: 116]</li>
+                <li>Scalable Architecture: Designed system for processing multiple images with efficient resource management and automated quality control mechanisms [cite: 117]</li>
             </ul>
             </li>
 
             <li style="list-style: none;"><h3><b>Emotion Detection Model</b></h3>
             <a href="https://git.arts.ac.uk/23046385/AI-4-Media-Project-Ketan-Sharma" target="_blank">View Project</a>
             <ul>
-                <li>Developed a deep learning-based emotion recognition system for media playback applications using computer vision techniques and neural networks</li>
-                <li>Achieved 82% accuracy when validated on annotated datasets</li>
+                <li>Custom CNN Architecture: Built a 4-layer convolutional neural network with batch normalization and dropout regularization, achieving 82% accuracy on emotion classification across 7 emotional states. [cite: 101]</li>
+                <li>Real-time Computer Vision Pipeline: Implemented an OpenCV-based face detection and emotion recognition system with optimized frame processing for real-time webcam input. [cite: 102]</li>
+                <li>Advanced Model Training: Employed class-weighted loss functions, weighted random sampling, and data augmentation to handle imbalanced datasets and improve model generalization. [cite: 103]</li>
+                <li>Multi-threaded Architecture: Designed a concurrent processing system with separate threads for video capture, emotion detection, and audio playback to ensure smooth real-time performance. [cite: 104]</li>
+                <li>Audio Processing Integration: Integrated librosa for dynamic tempo scaling and time-stretching algorithms that modify music playback based on detected emotional states. [cite: 106]</li>
+                <li>PyTorch Deep Learning: Utilized the PyTorch framework with the Adam optimizer, learning rate scheduling, and label smoothing for robust model training and convergence. [cite: 107]</li>
             </ul>
             </li>
 
             <li style="list-style: none;"><h3><b>Virtual Real-time Clothing Try-on System</b></h3>
             <a href="https://github.com/23046385/AI-Powered-Virtual-Try-On-System" target="_blank">View Project</a>
             <ul>
-                <li>Implementing monocular 3D body reconstruction using webcam input and pose estimation for personalized virtual try-on alignment</li>
-                <li>Developing multi-view garment mesh synthesis converting 2D garment images into 3D meshes via neural implicit surface reconstruction</li>
-                <li>Building material-aware cloth simulation with physically accurate garment deformation based on inferred material properties</li>
-                <li>Creating metadata-driven fit feedback system integrating product metadata for contextual, region-specific fit analysis</li>
+                <li>Currently building a real-time virtual fitting solution that enables users to try on clothing digitally using computer vision and augmented reality techniques [cite: 109]</li>
+                <li>Project in active development phase [cite: 110]</li>
             </ul>
             </li>
 
             <li style="list-style: none;"><h3><b>Health Habit Buddy</b></h3>
             <a href="https://github.com/23046385/Health-Habit-Buddy" target="_blank">View Project</a>
             <ul>
-                <li>Built a minimalist wellness tracking application using Streamlit framework for clean, modern black-and-white user interface</li>
-                <li>Integrated local AI text generation using Ollama and LLaMA 2 model for personalized motivational messages without cloud dependencies</li>
-                <li>Implemented privacy-focused architecture with 100% local processing, ensuring user data remains on-device</li>
-                <li>Developed daily habit tracking functionality with completion counters and AI-generated encouragement for each completed task</li>
-                <li>Created an offline-first application design targeting wellness creators and health-conscious users with a focus on data privacy</li>
+                <li>Local AI Integration: Implemented offline-first architecture using Ollama and LLaMA 2 model for privacy-focused AI text generation without cloud dependencies [cite: 119]</li>
+                <li>Streamlit Framework: Built clean, modern user interface using Streamlit with minimalist black-and-white design for optimal user experience [cite: 119]</li>
+                <li>Privacy-Focused Architecture: Developed 100% local processing system ensuring user data remains on-device with no external data transmission [cite: 120]</li>
+                <li>Personalized AI Messaging: Created intelligent encouragement system that generates contextual motivational messages based on user habit completion patterns [cite: 122]</li>
+                <li>Offline-First Design: Engineered application to function completely offline, targeting wellness creators and health-conscious users prioritizing data privacy [cite: 124]</li>
             </ul>
             </li>
+
+            <h2 id="languages">Languages</h2>
+            <hr>
+            <ul>
+                <li>English: Fluent [cite: 140]</li>
+                <li>Hindi: Native [cite: 140]</li>
+                <li>Thethi: Native [cite: 140]</li>
+                <li>Marathi: Conversational [cite: 140]</li>
+            </ul>
+
             <h2 id="hobbies">Hobbies</h2>
             <hr>
-            <p>I'm passionate about running and weightlifting to stay disciplined, love maintaining aquariums and studying aquatic ecosystems, explore quantum computing and emerging technologies, and prioritize staying both physically fit and mentally sharp.</a>.</p>
-          <!--End Projects-->
+            <p>I stay physically active through running and weightlifting, maintain aquariums, explore quantum computing, and enjoy cooking. [cite: 80]</p>
+          </div>
         </div>
       </div>
     </div>
